--- a/style.css
+++ b/style.css
@@ -53,10 +53,11 @@ input:focus {
 	flex-direction: column;
 }
 
-video{
+.container__link{
 	width: 100%;
 	height: 200px;
-	
+	overflow: hidden;
+	margin-bottom: 25px;
 }
 
 @media only screen and (min-width: 400px){
@@ -64,24 +65,27 @@ video{
 	.container{
 		flex-direction: row;
 		flex-wrap: wrap;
+		justify-content: space-around;
 	}
 	
-	video{
+	.container__link{
 		width: 40%;
+		margin-left: 0px;
 	}
 	
 }
 
 @media only screen and (min-width: 900px){
 	
-	video{
+	.container__link{
 		width: 30%;
-		margin-left: 2.5%;
+		margin-left: 0px;
 	}
 	
 	.container{
 		width: 80%;
 		max-width: 1040px;
+		justify-content: space-around;
 	}
 	
 }
